--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">LocationSearcher</string>
     <string name="action_settings">Settings</string>
     <string name="search_hint">Search here</string>
+    <string name="distance_unit">%1$s meters</string>
 </resources>
