--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="search_hint">Search here</string>
     <string name="distance_unit">%1$s meters</string>
+    <string name="title_activity_detail">DetailActivity</string>
 </resources>
